--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 rabbitmq.propostapendente.exchange=proposta-pendente.ex
+agendador.propostanaointegrada.intervalo=10
