Add configuration for propostaConcluida RabbitMQ exchange
Introduced a new RabbitMQ exchange `propostaConcluida` along with its bindings and fanout exchange in `RabbitMQConfiguration`. Updated `application.properties` and added metadata for the new property to ensure proper configuration and documentation.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,5 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 rabbitmq.propostapendente.exchange=proposta-pendente.ex
+rabbitmq.propostaconcluida.exchange=proposta-pendente.ex
 agendador.propostanaointegrada.intervalo=10
