Update RabbitMQ configs and migrate to application.yml
Renamed RabbitMQ exchange properties for consistency, updated `RabbitMQConfiguration` to reflect the changes, and migrated configuration file from `application.properties` to `application.yml`. Improved structure and readability of the configuration settings.

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -4,5 +4,15 @@
       "name": "rabbitmq.propostaconcluida.exchange",
       "type": "java.lang.String",
       "description": "Description for rabbitmq.propostaconcluida.exchange."
-  }
-] }
+    },
+    {
+      "name": "rabbitmq.exchanges.proposta-pendente",
+      "type": "java.lang.String",
+      "description": "Description for rabbitmq.exchanges.proposta-pendente."
+    },
+    {
+      "name": "rabbitmq.exchanges.proposta-concluida",
+      "type": "java.lang.String",
+      "description": "Description for rabbitmq.exchanges.proposta-concluida."
+    }
+  ] }
