Add DLQ configuration for proposta-pendente queue
Introduced a dead-letter queue (DLQ) and related exchange for the proposta-pendente queue. Updated `RabbitMQConfiguration` to include DLQ beans and bindings, and added the DLX exchange to the application YAML. This change enhances message handling reliability for the proposta-pendente flow.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,6 +20,7 @@ spring:
 rabbitmq:
   exchanges:
     proposta-pendente: proposta-pendente.ex
+    proposta-pendente-dlx: proposta-pendente-dlx.ex
     proposta-concluida: proposta-concluida.ex
 
 scheduler:
