Add RabbitMQ listener for processing completed proposals
Introduced `PropostaConcluidaListener` to handle messages from the "proposta-concluida" RabbitMQ queue and save them to the repository. Updated Spring configuration metadata and `application.yaml` to define the new queue settings. This enables automated processing of completed proposals.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -27,6 +27,9 @@ rabbitmq:
     proposta-pendente: proposta-pendente.ex
     proposta-pendente-dlx: proposta-pendente-dlx.ex
     proposta-concluida: proposta-concluida.ex
+  queue:
+    proposta:
+      concluida: proposta-concluida.ms-proposta
 
 scheduler:
   propostas:
