--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -9,5 +9,10 @@
       "name": "rabbitmq.exchanges.proposta-concluida",
       "type": "java.lang.String",
       "description": "Description for rabbitmq.exchanges.proposta-concluida."
+    },
+    {
+      "name": "rabbitmq.queue.proposta.concluida",
+      "type": "java.lang.String",
+      "description": "Description for rabbitmq.queue.proposta.concluida."
     }
   ] }
