Replace Spring Cloud Sleuth with Micrometer Tracing
Updated dependencies in build.gradle to use Micrometer Tracing with Brave instead of Spring Cloud Sleuth. Also added configuration for trace sampling probability in application.yaml to ensure all traces are captured. This improves compatibility with the updated tracing framework.

--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.spring.cloud:spring-cloud-sleuth-zipkin'
-    implementation 'org.spring.cloud:spring-cloud-starter-sleuth'
+    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
+    implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.postgresql:postgresql'
