--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -34,6 +34,7 @@ scheduler:
   propostas:
     nao-integradas:
       intervalo: 10 # Intervalo em minutos
+#Zipkin
 management:
   tracing:
     sampling:
