Add PostgreSQL StatefulSet and related Kubernetes configs
Introduce PersistentVolumeClaim, ConfigMap, Service, and StatefulSet for PostgreSQL to support persistent database storage and configuration management. Additionally, fix a typo in the RabbitMQ service configuration ("LoadBalacer" to "LoadBalancer").

--- a/k8s/services/rabbitmq/rabbit-service.yaml
+++ b/k8s/services/rabbitmq/rabbit-service.yaml
@@ -5,7 +5,7 @@ metadata:
   name: rabbitmq
   labels:
     app: rabbitmq
-    type: LoadBalacer
+    type: LoadBalancer
 spec:
   selector:
     app: rabbitmq
