Remove unnecessary RabbitMQ deployment and refine configs
Deleted an unused RabbitMQ deployment file to clean up the repository. Added a new Kubernetes-specific application configuration file to support the service. Also updated the PostgreSQL ConfigMap to use quoted values for better YAML compatibility.

--- a/k8s/services/postgres/configmap.yaml
+++ b/k8s/services/postgres/configmap.yaml
@@ -3,6 +3,6 @@ kind: ConfigMap
 metadata:
   name: postgres-config
 data:
-  POSTGRES_DB: propostafindb
-  POSTGRES_USER: postgres
-  POSTGRES_PASSWORD: 1234
+  POSTGRES_DB: "propostafindb"
+  POSTGRES_USER: "postgres"
+  POSTGRES_PASSWORD: "1234"
