--- a/src/main/resources/application-k8s.yaml
+++ b/src/main/resources/application-k8s.yaml
@@ -9,6 +9,11 @@ spring:
     url: jdbc:postgresql://postgres:5432/propostafindb
     username: postgres
     password: 1234
+  jpa:
+    show-sql: true
+    database: postgresql
+    hibernate:
+      ddl-auto: update
 management:
   endpoints:
     web:
