Change Postgres service type to NodePort
Updated the Postgres service from ClusterIP to NodePort to allow external access. Assigned a specific nodePort (35432) for consistent connectivity. This change facilitates debugging and external integrations with the database.

--- a/k8s/services/postgres/postgres-service.yaml
+++ b/k8s/services/postgres/postgres-service.yaml
@@ -6,8 +6,9 @@ metadata:
 spec:
   selector:
     app: postgres
-  type: ClusterIP
+  type: NodePort
   ports:
     - port: 5432
       targetPort: 5432
+      nodePort: 35432
 
